--- a/Gunluk/appsettings.json
+++ b/Gunluk/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "UygulamaDbContext": "server=.;database=Gunluk;uid=sa;pwd=albek112"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
